<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true"
        android:baselineAligned="false">

        <TextView
            android:id="@+id/txtInfo"
            android:text="@string/btInf"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:gravity="center"
            android:textSize="40sp"
            android:textStyle="bold|normal"/>
        <TextView
            android:id="@+id/txtChassi"
            android:text="@string/txtChassi"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="1"/>

        <EditText
            android:id="@+id/edtInfo"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_column="1"
            android:layout_row="1" />

        <TextView
            android:id="@+id/txtNEcu"
            android:text="@string/txtNEcu"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="2"/>

        <EditText
            android:id="@+id/edtNEcu"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_column="1"
            android:layout_row="2"
            android:hint="@string/btInfo"/>

        <TextView
            android:id="@+id/txtInfo3"
            android:text="@string/txtInfo3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="3"/>

        <EditText
            android:id="@+id/edtInfo3"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_column="1"
            android:layout_row="3"/>

        <TextView
            android:id="@+id/txtInfo4"
            android:text="@string/txtInfo4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="4"/>

        <EditText
            android:id="@+id/edtInfo4"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_column="1"
            android:layout_row="4"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="287dp">


        </RelativeLayout>

    </GridLayout>


</ScrollView>
